# flexpad

./: .gitignore  Cargo.toml  flexpad.js  flexpad_bg.wasm  index.html
.github/workflows/: rust.yml
flexpad/: Cargo.toml
flexpad-grid/: Cargo.toml
flexpad-grid/src/: borders.rs  grid.rs  lengths.rs  lib.rs  sequence.rs
flexpad-grid/src/grid/: addressing.rs  cell.rs  cells.rs  head.rs  operation.rs  scroll.rs  state.rs  style.rs
flexpad-grid/src/grid/scroll/: operation.rs  state.rs
flexpad-keymap/: Cargo.toml
flexpad-keymap/src/: lib.rs
flexpad-model/: Cargo.toml
flexpad-model/locales/: en.yaml
flexpad-model/src/: lib.rs
flexpad-toolkit/: Cargo.toml
flexpad-toolkit/src/: action.rs  action_button.rs  button_bar.rs  dialog.rs  helpers.rs  key.rs  lib.rs  menu.rs  modal.rs  prelude.rs  shortcut.rs  style.rs  toolbar.rs
flexpad-toolkit/src/menu/: bar.rs  data.rs  menu_overlay.rs  path.rs
flexpad/locales/: en.yaml
flexpad/resources/: en.yaml
flexpad/src/: actions.rs  loading.rs  main.rs  model.rs  ui.rs  version.rs
flexpad/src/menu/: edit_menu.rs  workpad_menu.rs
flexpad/src/model/: workpad.rs
flexpad/src/ui/: action.rs  active_sheet.rs  add_sheet.rs  dialog.rs  front_screen.rs  images.rs  key.rs  loading.rs  lobby.rs  menu.rs  modal.rs  ok_cancel.rs  pad_properties.rs  sheet_properties.rs  style.rs  util.rs  workpad.rs
flexpad/src/ui/menu/: data.rs  menu_overlay.rs  path.rs  state.rs
flexpad/src/ui/menus/: edit_menu.rs  workpad_menu.rs
flexpad/src/ui/util/: action.rs  dialog.rs  error.rs  factory.rs  images.rs  key.rs  menu.rs  modal.rs  style.rs  toolbar.rs
flexpad/src/ui/util/menu/: bar.rs  data.rs  menu_overlay.rs  path.rs
flexpad/src/ui/widget/: active_cell.rs  inactive_cell.rs
flexpad/src/ui/widget/active_cell/: editor.rs
flexpad/src/ui/workpad/: active.rs  active_cell.rs  active_sheet.rs  add_sheet.rs  error.rs  inactive.rs  inactive_cell.rs  pad_properties.rs  sheet_properties.rs
flexpad/src/ui/workpad/active/: cursor.rs  editor.rs  platform.rs
flexpad/src/ui/workpad/active_cell/: editor.rs
flexpad/src/view/: active_sheet.rs  add_sheet.rs  error.rs  lobby.rs  pad_properties.rs  sheet_properties.rs
flexpad/src/widget/: active_cell.rs  inactive_cell.rs
flexpad/src/widget/active_cell/: editor.rs
src/: app.rs  images.rs  lib.rs  main.rs  version.rs
src/model/: workpad.rs
src/ui/: app.rs  mod.rs
src/ui/app/: front_screen.rs  mod.rs  workpad_screen.rs
src/ui/images/: mod.rs
src/ui/widgets/: workpad.rs
