[workspace]
resolver = "2"
members = [
    "flexpad",
    "flexpad-grid"
]

[workspace.package]
version = "0.0.2"
authors = ["Dave Wathen <dave@wathenweb.com>"]
rust-version = "1.65"
edition = "2021"

[workspace.dependencies]
iced = { version = "0.10.0", features = ["advanced", "image"] }
iced_aw = { path = "../iced_aw", version = "0.7.0", default-features = false, features = ["card", "menu", "modal", "quad"] }
internment = "0.7.1"
tracing = "0.1"
tracing-subscriber = "0.3"
whoami = "1.4.1"
unicode-segmentation = "1.10.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
