[workspace]
resolver = "2"
members = [
    "flexpad",
    "flexpad-grid",
    "flexpad-model",
]

[workspace.package]
version = "0.0.2"
authors = ["Dave Wathen <dave@wathenweb.com>"]
rust-version = "1.65"
edition = "2021"

[workspace.dependencies]
backtrace = "0.3"
rust-i18n = "2"
iced = { git = "https://github.com/iced-rs/iced", features = ["advanced", "image", "tokio"], branch = "master"}
internment = "0.7.1"
itertools = "0.12.0"
once_cell = "1.18.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
whoami = "1.4.1"
unicode-segmentation = "1.10.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }

# [patch."https://github.com/iced-rs/iced"]
# iced = { path = "../iced" }
