[package]
name = "flexpad-grid"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace.workspace = true
iced = { workspace = true }
tracing = { workspace = true }
