[package]
name = "flexpad-model"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
backtrace.workspace = true
rust-i18n.workspace = true
internment.workspace = true
itertools.workspace = true
once_cell.workspace = true
tracing.workspace = true
uuid.workspace = true
whoami.workspace = true
