[package]
name = "flexpad"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
build = "build.rs"

[build-dependencies]
vergen = { version = "8.2.1", features = [ "build", "git", "gitoxide" ] }

[dependencies]
compact_str = "0.7.1"
iced = { workspace = true }
flexpad-grid = { path = "../flexpad-grid" }
once_cell = "1.18.0"
