[package]
name = "flexpad"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
build = "build.rs"

[build-dependencies]
vergen = { version = "8.2.1", features = [ "build", "git", "gitoxide" ] }

[dependencies]
backtrace.workspace = true
iced.workspace = true
iced_aw.workspace = true
internment.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
whoami.workspace = true
unicode-segmentation.workspace = true
uuid.workspace = true

flexpad-grid = { path = "../flexpad-grid" }

once_cell = "1.18.0"
rust-i18n = "2"
